# paper1-uqrv-alns

./: .gitignore  README.md  README_OPEN_FIRST.txt  RUN_REPRODUCE_FULL.ps1  RUN_REPRODUCE_QUICK.ps1  RUN_TESTS.ps1  pyproject.toml  requirements.txt
data/: README.md
docs/: PROJECT_SOURCE_MAP.md  algorithm.md  api.md  app.js  claim_algorithm_evidence_ledger.md  experiments.md  final_experiment_completeness_20260625.md  index.html  model.md  styles.css
manuscript_context/: main.bbl  main.tex  manuscript_draft.md  references.bib
metadata/: source_delivery_file_manifest.csv  source_delivery_sha256_zip.txt  source_reproduction_by_section_readme.md
scripts/: audit_gis_metric_alignment.py  build_delivery_package.py  build_public_gis_case.py  generate_manuscript_figures.py  generate_publishable_figures.py  generate_tre2_algorithm_mechanism.py  generate_tre2_style_outputs.py  redraw_tre2_algorithm_figures.py  redraw_tre2_experiment_design_figures.py  redraw_tre2_fig7_fig8.py  redraw_tre2_priority_figures.py  redraw_tre2_results_figures.py  redraw_tre2_system_scene.py  render_submission_preview.py  run_airlab_energy_calibration.py  run_experiment_suite.py  run_public_gis_case_experiment.py  run_publishable_experiments.py  run_repair_stress_experiment.py  run_statistical_tests.py  train_energy_surrogate.py  write_elsevier_latex.py  write_full_result_tables.py  write_manuscript_draft.py
tests/: test_airlab_energy_calibration.py  test_alns_operators.py  test_candidate_stops.py  test_energy.py  test_energy_surrogate.py  test_energy_training_script.py  test_gis_case.py  (+13 more)
(+1102 files in other folders)
